fixed-font-size on mobile

--- a/Sass/_about.scss
+++ b/Sass/_about.scss
@@ -100,20 +100,21 @@
     .right{
       .title-text{
         h1{
-          font-size: 6vw;
+          font-size: 8vw;
         }
         h2{
-          font-size: 4.5vw;
+          font-size: 6.5vw;
         }
       }
 
       .second-text{
+        margin-top: 100px;
         .inner{
           h3{
-            font-size: 4.5vw;
+            font-size: 7vw;
           }
           p{
-            font-size: 3.5vw;
+            font-size: 4.5vw;
             text-align: center;
           }
         }
@@ -121,7 +122,15 @@
 
       .skills{
         display: grid;
-        grid-template-columns: repeat(4,20px);
+        grid-template-columns: repeat(4,50px);
+        justify-content: space-around;
+
+        .box{
+          margin-top: 30px;
+          img{
+            width: 55px;
+          }
+        }
       }
     }
   }
